packages/test-dev-server/tests/fixtures/invalidation-multiple-parent/src/parent1.js
import assert from 'node:assert';
import { value } from './child';

assert(['child', 'child-updated'].includes(value));

if (import.meta.hot) {
  import.meta.hot.accept();
}
